test_suite/alan-2022-examples/failing/006280_mutation.alan
source Ys begin leave 187 boolean T; <> 2923 end
